# point_support

./: .gitmodules  README.md  dependencies.repos
cli_srvr/: CMakeLists.txt  package.xml
cli_srvr/include/cli_srvr/: runThreads  temp_threading.cpp  temp_threading.hpp  thread_test.cpp
cli_srvr/msg/: PoseArray.msg
cli_srvr/src/: return_reach_score_server.cpp
cli_srvr/srv/: CheckGridsetReachability.srv
pcd_files/: new_points.pcd  raster_test.pcd
point_support/: README.md
point_support/pcd_files/: full_points.pcd  pose.pcd  squashed.pcd
point_support/python/: make_point_file.py  pose_arr_to_pcd.py  txt_to_pcd.py
point_support/txt_files/: floats.txt  out.txt
python/: make_point_file.py
python/txt_files/: raster_test.txt
reach_msgs/: CMakeLists.txt  package.xml
reach_msgs/msg/: PoseArray.msg
reach_msgs/srv/: CheckGridsetReachability.srv
reach_study/: README.md  ReachFeedback.msg  parseXML  xml_parser.cpp  xml_parser.hpp
reach_study/reach_support_files/: airfoil.pcd  airfoil.ply  airfoil_study.yaml  includes.txt  reach.db.xml
reach_study/result_processing/include/result_processing/: distance_claculator.hpp
reach_study/result_processing/src/: distance_calculator.cpp
reach_study/xml_parsing/: CMakeLists.txt  array_transform.cpp  array_transform.hpp  file_params.yaml  main.cpp  package.xml  parseXML  testArr  testArr.cpp  xml_parser.cpp  xml_parser.hpp  xml_structure.txt
reach_study/xml_parsing/include/reach_parse/: array_transform.hpp  research_structs.hpp  result_parsing.hpp  xml_parser.hpp
reach_study/xml_parsing/src/: array_transform.cpp  result_parsing.cpp  xml_parser.cpp
reach_study/xml_parsing/tests/: hmmmmm  main.cpp  runFile  run_nodes_test.cpp  testArr.cpp
result_processing/: CMakeLists.txt  package.xml
result_processing/include/result_processing/: distance_claculator.hpp
testing/: upper_bounds.txt
txt_files/: new_points.txt
